# llm-security-guardrail-platform

./: .gitignore  AGENTS.md  AUTODL_AGENT_PROMPT.md  AUTODL_RECOVERY.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py
backend/app/agent/: __init__.py  graph.py  tool_agent.py
backend/app/api/: main.py
backend/app/config/: settings.py
backend/app/evals/: defense_feedback.py  experiment_report.py  failure_ingest.py  formal.py  garak.py  paired.py  promptfoo.py  regression_sets.py  report_store.py  runner.py
backend/app/guardrails/: __init__.py  guard_packs.py  nemo_runtime.py  pipeline.py
backend/app/guardrails/nemo_config/: config.py  config.yml  rails.co
backend/app/models/: provider.py
backend/app/rag/: poisoning_demo.py  sanitizer.py  service.py
backend/app/schemas/: __init__.py  security.py
backend/app/tools/: gateway.py
backend/tests/: test_agent_api.py  test_api.py  test_api_chat_and_tools.py  test_api_evals.py  test_api_experiment_reports.py  test_api_formal_experiment.py  test_api_model_control.py  test_api_paired_evals.py  test_api_rag.py  test_api_report_files.py  test_defense_feedback.py  test_eval_runner.py  test_experiment_report.py  test_garak_runner.py  test_guard_engines.py  test_guard_packs_api.py  test_guardrails.py  test_hybrid_rag_service.py  test_model_provider.py  test_openai_compat.py  test_promptfoo_runner.py  test_rag_poisoning_demo.py  test_rag_service.py  test_report_store.py  test_schemas.py  test_static_frontend.py  test_tool_gateway.py
docs/: README.md  beginner-development-log.md  (+4 more)
(+23 files in other folders)
