[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-security-guardrail-platform-backend"
version = "0.1.0"
description = "Backend foundation for an auditable LLM security guardrail platform."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "langgraph>=0.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
]
garak = [
  "garak>=0.15.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
